Edited index and style

--- a/index.html
+++ b/index.html
@@ -154,13 +154,13 @@
   <!-- buy-section -->
   <div class="container-fluid space" id="buy">
     <div class="row justify-content-center" id="buy-section">
-      <div class="col-md-6 align-self-center" id="buy-text">
+      <div class="col-md-6 align-self-center mt-2" id="buy-text">
         <h1>BUY</h1>
         <p>Buy Indian handicrafts online. Traditional & authentic handicraft items - wooden, terracotta and ceramic.<br>&#9830COD Available<br>&#9830Free Shipping<br>&#9830Traditional Crafts of India</p>
-        <button type="button" class="btn btn-info" id="bannerbtn1">Buy</button>
+        <button type="button" class="btn btn-info mb-2" id="bannerbtn1">Buy</button>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus quo beatae eius error dolore consequatur repellat! Nesciunt adipisci eligendi, quasi reiciendis a iusto temporibus perspiciatis enim aspernatur. Et possimus beatae vero, officiis explicabo aliquid nobis consectetur natus asperiores amet tenetur esse cum? Ad, minus! Commodi sit error inventore iure blanditiis ullam hic consequuntur cum quod adipisci placeat, totam vitae rem magnam harum officiis minus, nesciunt necessitatibus? Possimus sequi dicta inventore nam facere, cupiditate blanditiis accusantium minima, cum consequatur sapiente iure officia ad sint quaerat itaque. Quis eius eveniet ipsum ea officia ipsam eligendi architecto nihil, consequuntur provident dolorem, sequi eum tempora, maxime voluptatum ad accusantium laudantium aperiam cum optio earum distinctio! Odio, sunt beatae aut repudiandae voluptatum reprehenderit eligendi aliquid, et laudantium asperiores tenetur adipisci impedit iure quod sapiente ducimus molestiae dicta, voluptate nemo magnam maiores autem. Repellat fugiat dolore, vero voluptatum dignissimos nemo autem, praesentium ex debitis explicabo libero tempore quas? Blanditiis repellendus officia non dolore facilis distinctio aliquid placeat aspernatur veritatis consectetur, adipisci, nostrum accusantium ab eum suscipit error rem sunt, temporibus possimus! Distinctio harum pariatur officiis quisquam nostrum eveniet totam iste aperiam dolore porro eligendi, animi maiores sequi sunt similique nulla reiciendis molestiae, aliquam provident debitis iure.</p>
       </div>
-      <div class="col-md-4 d-flex align-items-center">
+      <div class="col-md-4 d-flex align-items-center mb-4">
         <img src="des-img-1.jpg" class="img-fluid" alt="">
       </div>
     </div>
@@ -169,13 +169,15 @@
   <!-- sell-section -->
   <div class="container-fluid space mt-8" id="sell">
     <div class="row justify-content-center" id="sell-section">
-      <div class="col-md-4 d-flex align-items-center">
+      <div class="col-md-4 d-flex align-items-center mb-4">
         <img src="nav_bg.webp" class="img-fluid" alt="">
       </div>
-      <div class="col-md-6 text-end align-self-center" id="sell-text">
+      <div class="col-md-6 text-end mt-2" id="sell-text">
         <h1>SELL</h1>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Est excepturi fugit odit nemo officiis ratione sed velit commodi, ipsa provident vel doloribus ducimus iusto nam sequi nostrum repudiandae sunt debitis dolorum maiores. Minus vel recusandae sapiente odit non exercitationem, veritatis deleniti illo, beatae quae nam minima blanditiis maiores fuga consequatur suscipit nostrum dolore nobis dicta. Itaque aliquam accusamus voluptate minus quis atque sed incidunt reiciendis aut, ullam fugiat excepturi, illo aliquid sint quos a accusantium repellat vitae molestiae soluta qui reprehenderit quasi et! Dolore maxime totam reprehenderit adipisci eius iste similique ea atque explicabo cumque dicta itaque vitae quidem voluptates, provident a eum ratione. Voluptas fuga numquam deserunt, asperiores saepe aliquam delectus inventore laboriosam nostrum corrupti corporis incidunt, cum doloremque minus cumque enim eaque tempore modi? Aut quas ea quae. Aspernatur sit ex quo dolorum earum dignissimos assumenda dolore fugit iste nostrum tenetur veniam similique magnam impedit nesciunt harum, totam nobis repudiandae accusamus enim! Dolorem impedit, voluptatum architecto pariatur, fugit cum enim rem aliquam facilis voluptatem explicabo reiciendis similique rerum quos laudantium officiis nesciunt esse veniam repudiandae deserunt ducimus odit? Animi, ex ea iusto, quisquam recusandae explicabo non sed tempora rerum rem vero ad impedit blanditiis nobis optio velit? Eius.</p>
-        <button type="button" class="btn btn-info" id="bannerbtn1">Sell</button>
+        <p>
+          <button type="button" class="btn btn-info mb-2" id="bannerbtn1">Sell</button>
+        </p>
       </div>
     </div>
   </div>
