--- a/index.html
+++ b/index.html
@@ -62,16 +62,18 @@
   <!-- description of website -->
   <div class="container-fluid space">
     <div class="row justify-content-center" id="banner">
-      <div class="col-md-6" id="bannertext">
-        <h1 class="text-dark">Handicraft<br>Products</h1>
-        <p class="text-dark">
+      <div class="col-md-6 mb-4" id="bannertext">
+        <h1 class="text-dark mb-2">Handicraft<br>Products</h1>
+        <p class="text-dark mb-4">
           "India is the nation of villages and the soul of India lives in its villages."<br>
           This statement by Mahatma Gandhi has become outdated now, because it is nearly immpossible to find a pure handmade craft made by the villagers. We at <strong>"Buy And Sell"</strong> provide you the facility to reach out to the original handmade crafts.
         </p>
-        <button type="button" class="btn btn-info" id="bannerbtn1">Login</button>
-        <button type="button" class="btn btn-light" id="bannerbtn2">Sign Up</button>
+        <p>
+          <button type="button" class="btn btn-info" id="bannerbtn1">Login</button>
+          <button type="button" class="btn btn-light" id="bannerbtn2">Sign Up</button>
+        </p>
       </div>
-      <div class="col-md-4 d-flex align-items-center" id="bannerimg">
+      <div class="col-md-4 d-flex align-items-center mb-4" id="bannerimg">
         <img src="banner-img.jpg" class="img-fluid" alt="Banner-img">
       </div>
     </div>
@@ -156,9 +158,9 @@
     <div class="row justify-content-center" id="buy-section">
       <div class="col-md-6 align-self-center mt-2" id="buy-text">
         <h1>BUY</h1>
-        <p>Buy Indian handicrafts online. Traditional & authentic handicraft items - wooden, terracotta and ceramic.<br>&#9830COD Available<br>&#9830Free Shipping<br>&#9830Traditional Crafts of India</p>
+        <p class="fs-4">This platform provides facility for both buying and selling handicrafts. If you are tired of finding an attractive handicraft at low price in your nearby shops then you ar at right place. Click on <strong>Buy</strong> to start your shopping.</p>
+        <p class="fs-5">Buy Indian handicrafts online. Traditional & authentic handicraft items - wooden, terracotta and ceramic.<br>&#9830COD Available<br>&#9830Free Shipping<br>&#9830Traditional Crafts of India</p>
         <button type="button" class="btn btn-info mb-2" id="bannerbtn1">Buy</button>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus quo beatae eius error dolore consequatur repellat! Nesciunt adipisci eligendi, quasi reiciendis a iusto temporibus perspiciatis enim aspernatur. Et possimus beatae vero, officiis explicabo aliquid nobis consectetur natus asperiores amet tenetur esse cum? Ad, minus! Commodi sit error inventore iure blanditiis ullam hic consequuntur cum quod adipisci placeat, totam vitae rem magnam harum officiis minus, nesciunt necessitatibus? Possimus sequi dicta inventore nam facere, cupiditate blanditiis accusantium minima, cum consequatur sapiente iure officia ad sint quaerat itaque. Quis eius eveniet ipsum ea officia ipsam eligendi architecto nihil, consequuntur provident dolorem, sequi eum tempora, maxime voluptatum ad accusantium laudantium aperiam cum optio earum distinctio! Odio, sunt beatae aut repudiandae voluptatum reprehenderit eligendi aliquid, et laudantium asperiores tenetur adipisci impedit iure quod sapiente ducimus molestiae dicta, voluptate nemo magnam maiores autem. Repellat fugiat dolore, vero voluptatum dignissimos nemo autem, praesentium ex debitis explicabo libero tempore quas? Blanditiis repellendus officia non dolore facilis distinctio aliquid placeat aspernatur veritatis consectetur, adipisci, nostrum accusantium ab eum suscipit error rem sunt, temporibus possimus! Distinctio harum pariatur officiis quisquam nostrum eveniet totam iste aperiam dolore porro eligendi, animi maiores sequi sunt similique nulla reiciendis molestiae, aliquam provident debitis iure.</p>
       </div>
       <div class="col-md-4 d-flex align-items-center mb-4">
         <img src="des-img-1.jpg" class="img-fluid" alt="">
@@ -174,7 +176,8 @@
       </div>
       <div class="col-md-6 text-end mt-2" id="sell-text">
         <h1>SELL</h1>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Est excepturi fugit odit nemo officiis ratione sed velit commodi, ipsa provident vel doloribus ducimus iusto nam sequi nostrum repudiandae sunt debitis dolorum maiores. Minus vel recusandae sapiente odit non exercitationem, veritatis deleniti illo, beatae quae nam minima blanditiis maiores fuga consequatur suscipit nostrum dolore nobis dicta. Itaque aliquam accusamus voluptate minus quis atque sed incidunt reiciendis aut, ullam fugiat excepturi, illo aliquid sint quos a accusantium repellat vitae molestiae soluta qui reprehenderit quasi et! Dolore maxime totam reprehenderit adipisci eius iste similique ea atque explicabo cumque dicta itaque vitae quidem voluptates, provident a eum ratione. Voluptas fuga numquam deserunt, asperiores saepe aliquam delectus inventore laboriosam nostrum corrupti corporis incidunt, cum doloremque minus cumque enim eaque tempore modi? Aut quas ea quae. Aspernatur sit ex quo dolorum earum dignissimos assumenda dolore fugit iste nostrum tenetur veniam similique magnam impedit nesciunt harum, totam nobis repudiandae accusamus enim! Dolorem impedit, voluptatum architecto pariatur, fugit cum enim rem aliquam facilis voluptatem explicabo reiciendis similique rerum quos laudantium officiis nesciunt esse veniam repudiandae deserunt ducimus odit? Animi, ex ea iusto, quisquam recusandae explicabo non sed tempora rerum rem vero ad impedit blanditiis nobis optio velit? Eius.</p>
+        <p class="fs-4">Sell Products Online With <strong>Buy And Sell</strong>: Create Your Online Store. Our platform offers everything you need, from website design to payment gateway, everything.</p>
+        <p class="fs-5">If you are not able to show your art and talent to the world we are here for you. You can sell your handmade articles directly to the customer through our platform at a reasonable cost. Click on <strong>Sell</strong> to start selling your articles.</p>
         <p>
           <button type="button" class="btn btn-info mb-2" id="bannerbtn1">Sell</button>
         </p>
@@ -222,16 +225,16 @@
               Products
             </h6>
             <p>
-              <a href="#!" class="text-reset text-decoration-none">Angular</a>
+              <a href="#!" class="text-reset text-decoration-none">Bamboo Products</a>
             </p>
             <p>
-              <a href="#!" class="text-reset text-decoration-none">React</a>
+              <a href="#!" class="text-reset text-decoration-none">Pottery</a>
             </p>
             <p>
-              <a href="#!" class="text-reset text-decoration-none">Vue</a>
+              <a href="#!" class="text-reset text-decoration-none">Home Decor</a>
             </p>
             <p>
-              <a href="#!" class="text-reset text-decoration-none">Laravel</a>
+              <a href="#!" class="text-reset text-decoration-none">Others</a>
             </p>
           </div>
           <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
