--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <a class="nav-link" aria-current="page" href="#"><strong>Home</strong></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#"><strong>About</strong></a>
+            <a class="nav-link" href="#about"><strong>About</strong></a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#services"><strong>Services</strong></a>
@@ -60,7 +60,7 @@
   </nav>
 
   <!-- description of website -->
-  <div class="container-fluid space">
+  <div class="container-fluid space" id="about">
     <div class="row justify-content-center" id="banner">
       <div class="col-md-6 mb-4" id="bannertext">
         <h1 class="text-dark mb-2">Handicraft<br>Products</h1>
@@ -187,7 +187,7 @@
 
   <!-- footer -->
   <footer class="text-center text-lg-start text-muted" id="footer1">
-    <section class="d-flex justify-content-center justify-content-lg-center p-4 border-bottom">
+    <section class="d-flex justify-content-center justify-content-lg-center p-4 border-bottom" id="contact">
       <div class="me-5 d-none d-lg-block">
         <span>Get connected with us on social networks:</span>
       </div>
