--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
   <script src="https://kit.fontawesome.com/c9d91500e7.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="style.css">
+  <link rel="shortcut icon" href="pottery.png" type="image/x-icon">
   <title>NEXUS</title>
 </head>
 
